# rust-email

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.config/: config.json5
.github/workflows/: cd.yml  ci.yml
mail-protocol/: Cargo.toml
mail-protocol/src/: backend.rs  error.rs  imap.rs  lib.rs  smtp.rs
migrations/: 20260715000000_initial_schema.sql
src/: action.rs  app.rs  components.rs  config.rs  database.rs  errors.rs  logging.rs  main.rs  tui.rs
src/components/: account_form.rs  folder_list.rs  fps.rs  home.rs  mail_list.rs  mail_view.rs  status_bar.rs
