[workspace]
members = [
    ".",
    "mail-protocol",
]

[package]
name = "rust-email"
version = "0.1.0"
edition = "2024"
description = "Null"
authors = ["None256 <nonessentialism@outlook.com>"]
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mail-protocol = { path = "./mail-protocol" }
better-panic = "0.3.0"
clap = { version = "4.6.1", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.5"
config = "0.15.25"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
human-panic = "2.0.8"
json5 = "1.3.1"
libc = "0.2.186"
pretty_assertions = "1.4.1"
ratatui = { version = "0.30.2", features = ["serde", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.4.4"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "serde"] }

[build-dependencies]
anyhow = "1.0.103"
vergen-gix = { version = "10.0.1", features = ["build", "cargo"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
